fix pagination spacing with blocks

--- a/assets/sass/_theme/design-system/pagination.sass
+++ b/assets/sass/_theme/design-system/pagination.sass
@@ -6,6 +6,8 @@
     display: flex
     flex-wrap: wrap
     margin-top: $spacing3
+    main.page-with-blocks &
+        padding-bottom: $spacing3
     li
         a
             color: inherit
